<resources>
    <string name="app_name">KanazawaApp_2017</string>
    <string name="next_button_atari">つぎのもんだい</string>
    <string name="next_button_hazire">もういっかいチャレンジ</string>

    <string name="kinnzisou">きんじそう</string>
    <string name="kinnzisou_description">きんじそうは、はのうらがきんときいものいろににているからきんじそうとよばれている。\nそのははすこしあまい。</string>
    <string name="hutokyuuri">かがふときゅうり</string>
    <string name="hutokyuuri_description">かがふときゅうりは、おもさがふつうのきゅうりよりおもい。\nやわらかくあまい。\nかわをむいてあんかけにするなどしてたべる。</string>
    <string name="hutonegi">かがいっぽんふとねぎ</string>
    <string name="hutonegi_description">かがいっぽんふとねぎは、ふつうのねぎよりもやわらかい。\nふゆになるほどあまくなり、すきやきやねべにいれる。</string>
    <string name="rennkonn">かがれんこん</string>
    <string name="rennkonn_description">かがれんこんは、ふつうのれんこんよりねばりがつよい。\nれんこんをむしたり、もちにしてたべるのがおすすめ。</string>
    <string name="washi">わし</string>
    <string name="washi_description">わしは、ふつうのかみよりもたいきゅうせいがある。\nそのため、かさやふくのざいりょうとしてつかわれることもある。</string>
    <string name="backToMap">＜もどる</string>
    <string name="KanazawaEvent">金沢市イベント情報</string>
    <string name="goToHomepage">ホームベージ＞</string>
</resources>
