<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/event_bg"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/KanazawaEvent"
            android:textColor="#000000"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/mapBack"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:text="@string/backToMap"/>

        <TextView
            android:id="@+id/toWeb"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/goToHomepage"
            android:textColor="#000000" />
    </FrameLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#000000"
        android:dividerHeight="1sp" />

</LinearLayout>