<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="0dp"
    android:background="@drawable/kaga_background">
    <FrameLayout
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="301dp">

        <ImageView
            android:id="@+id/zukei"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/maru_sironiki" />

        <ImageView
            android:id="@+id/yasai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/kyuuri800_sironuki" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#e6d7d7">


        <TextView
            android:id="@+id/yasai_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/kinnzisou"
            android:textSize="25dp"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/kagayasai2_nameflam"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kagayasai2_descriptionflame"
            android:text="@string/kinnzisou_description"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_atari"
            android:textSize="17dp"
            android:layout_gravity="right"/>
    </LinearLayout>


</LinearLayout>