<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kaga1_background"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="0dp">

    <FrameLayout
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="301dp">

        <ImageView
            android:id="@+id/zukei"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kaga2batu" />

        <ImageView
            android:id="@+id/yasai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/kyuuri800_sironuki" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#e6d7d7"
        android:gravity="center">

        <TextView
            android:id="@+id/yasai_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:textColor="#000"
            android:background="@drawable/kagayasai2_nameflam"
            android:text="@string/kinnzisou"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:background="@drawable/kagayasai2_descriptionflame"
            android:text="@string/kinnzisou_description"
            android:textSize="20dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/next_button_atari"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>